--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -234,7 +234,7 @@
    "source": [
     "#### Missing values\n",
     "\n",
-    "I am going to fill horsepower missing values with internet information and drop the mpg missing values"
+    "I am going to fill in the missing horsepower values with information from the internet because the dataset has few rows so I can better model and remove the missing mpg values."
    ]
   },
   {
@@ -1103,8 +1103,8 @@
     "The red line marks the average of mpg with this I can conclude:\n",
     "    \n",
     "    * Almost all cars in America (approx. 75%) are under to average of mpg (Miles to gallon)\n",
-    "    * Almost all cars in Janan and Europe are over to average of mpg (Miles to gallon)\n",
-    "\n",
+    "    * Almost all cars in Japan and Europe are over to average of mpg (Miles to gallon)\n",
+    "This can show that cars made in Japan and Europe have better fuel optimization compared to America.\n",
     "\n",
     "### Model year vs MPG"
    ]
@@ -1135,7 +1135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Over time the miles per gallon of the cars produced are increasing, as we can see in the graph, in the years 80, 81, 82 more than 75% of the data is above the average\n",
+    "Over time the miles per gallon of the cars produced are increasing, as we can see in the graph. We can also see that in recent years, the cars produced optimize the use of fuel more because more than 75% of the cars are above the average.\n",
     "\n",
     "### Cylinders vs MPG"
    ]
@@ -1196,10 +1196,520 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## asdfasdf\n",
+    "usa_mpg_max = auto_mpg_data_relationship[auto_mpg_data_relationship['country_code'] == 'USA']['mpg'].max()\n",
+    "usa_mpg_min = auto_mpg_data_relationship[auto_mpg_data_relationship['country_code'] == 'USA']['mpg'].min()\n",
+    "\n",
+    "europe_mpg_max = auto_mpg_data_relationship[auto_mpg_data_relationship['country_code'] == 'Europe']['mpg'].max()\n",
+    "europe_mpg_min = auto_mpg_data_relationship[auto_mpg_data_relationship['country_code'] == 'Europe']['mpg'].min()\n",
+    "\n",
+    "japan_mpg_max = auto_mpg_data_relationship[auto_mpg_data_relationship['country_code'] == 'Japan']['mpg'].max()\n",
+    "japan_mpg_min = auto_mpg_data_relationship[auto_mpg_data_relationship['country_code'] == 'Japan']['mpg'].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>company_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
+       "      <td>39</td>\n",
+       "      <td>4</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>1875.0</td>\n",
+       "      <td>16.4</td>\n",
+       "      <td>81</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>plymouth</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg cylinders  displacement  horsepower  weight  acceleration model_year  \\\n",
+       "351  39         4          86.0        64.0  1875.0          16.4         81   \n",
+       "\n",
+       "    country_code company_name  \n",
+       "351          USA     plymouth  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auto_mpg_data_relationship[auto_mpg_data_relationship['mpg'] == usa_mpg_max].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>company_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>4732.0</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>hi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   mpg cylinders  displacement  horsepower  weight  acceleration model_year  \\\n",
+       "34   9         8         304.0       193.0  4732.0          18.5         70   \n",
+       "\n",
+       "   country_code company_name  \n",
+       "34          USA           hi  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auto_mpg_data_relationship[auto_mpg_data_relationship['mpg'] == usa_mpg_min].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>company_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>44.3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>2085.0</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>VW</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "332  44.3         4          90.0        48.0  2085.0          21.7   \n",
+       "\n",
+       "    model_year country_code company_name  \n",
+       "332         80       Europe           VW  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auto_mpg_data_relationship[auto_mpg_data_relationship['mpg'] == europe_mpg_max].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>company_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>16.2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>163.0</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>3410.0</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>peugeot</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "284  16.2         6         163.0       133.0  3410.0          15.8   \n",
+       "\n",
+       "    model_year country_code company_name  \n",
+       "284         78       Europe      peugeot  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auto_mpg_data_relationship[auto_mpg_data_relationship['mpg'] == europe_mpg_min].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>company_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>46.6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>2110.0</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>mazda</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "329  46.6         4          86.0        65.0  2110.0          17.9   \n",
+       "\n",
+       "    model_year country_code company_name  \n",
+       "329         80        Japan        mazda  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auto_mpg_data_relationship[auto_mpg_data_relationship['mpg'] == japan_mpg_max].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>company_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>chevrolet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>plymouth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>18</td>\n",
+       "      <td>6</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>2774.0</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>amc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>18</td>\n",
+       "      <td>6</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>3288.0</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>71</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>amc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>18</td>\n",
+       "      <td>6</td>\n",
+       "      <td>258.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>2962.0</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>71</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>amc</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   mpg cylinders  displacement  horsepower  weight  acceleration model_year  \\\n",
+       "0   18         8         307.0       130.0  3504.0          12.0         70   \n",
+       "2   18         8         318.0       150.0  3436.0          11.0         70   \n",
+       "22  18         6         199.0        97.0  2774.0          15.5         70   \n",
+       "44  18         6         232.0       100.0  3288.0          15.5         71   \n",
+       "52  18         6         258.0       110.0  2962.0          13.5         71   \n",
+       "\n",
+       "   country_code company_name  \n",
+       "0           USA    chevrolet  \n",
+       "2           USA     plymouth  \n",
+       "22          USA          amc  \n",
+       "44          USA          amc  \n",
+       "52          USA          amc  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auto_mpg_data_relationship[auto_mpg_data_relationship['mpg'] == japan_mpg_min].head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the company that produces we can see that most companies have cars above and below the average but the most relevant thing is that some companies produced all cars above the mpg average such as opel, fiat, renault, honda, subaru .\n",
+    "According to the company that produces we can see that most companies have cars above and below the average but the most relevant thing is that some companies produced all cars above the mpg average such as opel, fiat, renault, honda, subaru.\n",
+    "We can also note some relevant companies with these data such as the companies with the highest and lowest fuel efficiency according to the country of the company:\n",
+    "    \n",
+    "    -  MPG max in USA -> plymouth\n",
+    "    -  MPG min in USA -> hi\n",
+    "    \n",
+    "    -  MPG max in Europe -> VW or Volkwagen\n",
+    "    -  MPG min in Europe -> peugeot\n",
+    "    \n",
+    "    -  MPG max in Japan -> mazda\n",
+    "    -  MPG min in Japan -> chevrolet, plymouth, amc\n",
+    "\n",
     "\n",
     "### Correlation"
    ]
@@ -1423,8 +1933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusión\n",
-    "\n",
+    "The relationship linear between horsepower and mpg is inverse as we can see in the graph and that implies that each time the mpg increases, the horsepower decreases, which implies that each time the car has more power it needs more fuel.\n",
     "\n",
     "### Weight vs MPG"
    ]
@@ -1455,7 +1964,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusión\n",
+    "The relationship between weight and mpg is inverse as we can see in the graph and that implies that each time the mpg increases, the weight decreases, which implies that each time the car is heavier it needs more fuel\n",
     "\n",
     "\n",
     "### Displacement vs MPG"
@@ -1487,10 +1996,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusión\n",
+    "The relationship between distance and mpg is inverse as we can see in the graph and that implies that each time the mpg increases, the distance decreases, which implies that each time the car has more distance traveled, the fuel increases.\n",
     "\n",
     "\n",
-    "### Acceleration vs MPG\n"
+    "### Acceleration vs MPG"
    ]
   },
   {
@@ -1519,7 +2028,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion"
+    "The relationship between acceleration and mpg cannot be evidenced by the graph as we can see the points are quite scattered"
    ]
   }
  ],
