--- a/Machine learning model.ipynb
+++ b/Machine learning model.ipynb
@@ -420,7 +420,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "According to the descriptive analysis carried out where we show that mpg is closely related to the variable of weight and distance traveled, we note that they are the most important variables for this prediction, which is consistent with the information provided by car production companies."
+   ]
   },
   {
    "cell_type": "code",
